--- a/build.gradle
+++ b/build.gradle
@@ -37,11 +37,8 @@ dependencies {
 
     //aws
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
-
-    // google meet
-    implementation 'com.google.api-client:google-api-client:2.0.0'
-    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
-    implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
+    // OKHttp
+    implementation("com.squareup.okhttp3:okhttp:4.9.1")
 }
 
 tasks.named('test') {
