--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DB Source URL
 #spring.datasource.url=jdbc:mysql://13.209.153.243:3306/career?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
-spring.datasource.url=
+spring.datasource.url=jdbc:mysql://career.cpg0a3xzfhf3.ap-northeast-2.rds.amazonaws.com:3306/career
 
 # DB username
 
-spring.datasource.username=
+spring.datasource.username=admin
 
 # DB password
-spring.datasource.password=
+spring.datasource.password=zjfldj12
 
 # true ??? JPA ??? ?? ??
 spring.jpa.show-sql=true
