--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,12 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     // OKHttp
     implementation("com.squareup.okhttp3:okhttp:4.9.1")
+
+    //jwt
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 }
 
 tasks.named('test') {
