--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,13 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.2'
     id 'io.spring.dependency-management' version '1.1.0'
+    id "org.sonarqube" version "4.4.1.3373"
+}
+sonar {
+    properties {
+        property "sonar.projectKey", "Carry-A-Way_Career-Server_AYwyf8l2EqkAxc_3B7Ws"
+        property "sonar.projectName", "Career-Server"
+    }
 }
 
 group = 'com.example'
