--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
     implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
-
+    testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
