--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,10 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
     implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
+
+    // aop
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    
     testImplementation 'com.h2database:h2'
 }
 
