--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,11 @@
 name: Build
 on:
-  workflow_run:
-    workflows: ["scan"]
-    types:
-      - completed
-
+  push:
+    branches:
+      - main
+    paths-ignore:
+    - '.github/workflows/**' 
+    - 'yaml/**'
 jobs:
   build:
     name: Build
