--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -17,11 +17,11 @@ jobs:
       with:
         fetch-depth: 0
         
-    - name: Set up JDK 17
-      uses: actions/setup-java@v1
-      with:
-        java-version: 17
-        distribution: temurin
+    # - name: Set up JDK 17
+    #   uses: actions/setup-java@v1
+    #   with:
+    #     java-version: 17
+    #     distribution: temurin
           
     - name: Cache SonarQube packages
       uses: actions/cache@v1
