--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -17,11 +17,11 @@ jobs:
       with:
         fetch-depth: 0
         
-    - name: Set up JDK 17
-      uses: actions/setup-java@v1
-      with:
-        java-version: 17
-        distribution: temurin
+    # - name: Set up JDK 17
+    #   uses: actions/setup-java@v1
+    #   with:
+    #     java-version: 17
+    #     distribution: temurin
           
     - name: Cache SonarQube packages
       uses: actions/cache@v1
@@ -33,10 +33,10 @@ jobs:
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
       with:
-        sonarHost: ${{ secrets.SONAR_HOST_URL }}
-        sonarToken: ${{ secrets.SONAR_TOKEN }}
-        projectBaseDir: '/github/workspace'
-      id: sonarqube
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #   projectBaseDir: '/github/workspace'
+      # id: sonarqube
       
     - name: Notify Discord on Failure
       if: failure() && steps.sonarqube.outcome == 'failure'
