--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -23,12 +23,12 @@ jobs:
     #     java-version: 17
     #     distribution: temurin
           
-    - name: Cache SonarQube packages
-      uses: actions/cache@v1
-      with:
-        path: ~/.sonar/cache
-        key: ${{ runner.os }}-sonar
-        restore-keys: ${{ runner.os }}-sonar
+    # - name: Cache SonarQube packages
+    #   uses: actions/cache@v1
+    #   with:
+    #     path: ~/.sonar/cache
+    #     key: ${{ runner.os }}-sonar
+    #     restore-keys: ${{ runner.os }}-sonar
           
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
