--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -16,12 +16,6 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-        
-    # - name: Set up JDK 17
-    #   uses: actions/setup-java@v1
-    #   with:
-    #     java-version: 17
-    #     distribution: temurin
           
     # - name: Cache SonarQube packages
     #   uses: actions/cache@v1
@@ -31,12 +25,10 @@ jobs:
     #     restore-keys: ${{ runner.os }}-sonar
           
     - name: SonarQube Scan
-      uses: sonarsource/sonarqube-scan-action@master
+      uses: sonarsource/sonarqube-scan-action@v1.0.0
       with:
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #   projectBaseDir: '/github/workspace'
-      # id: sonarqube
       
     - name: Notify Discord on Failure
       if: failure() && steps.sonarqube.outcome == 'failure'
