--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -31,12 +31,12 @@ jobs:
         restore-keys: ${{ runner.os }}-sonar
           
     - name: SonarQube Scan
-      uses: sonarsource/sonarqube-scan-action@master
+      uses: sonarsource/sonarqube-scan-action@v1.0.0
       with:
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #   projectBaseDir: '/github/workspace'
-      # id: sonarqube
+        projectBaseDir: '/github/workspace'
+      id: sonarqube
       
     - name: Notify Discord on Failure
       if: failure() && steps.sonarqube.outcome == 'failure'
