--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-          
+
     # - name: Cache SonarQube packages
     #   uses: actions/cache@v1
     #   with:
@@ -25,7 +25,7 @@ jobs:
     #     restore-keys: ${{ runner.os }}-sonar
           
     - name: SonarQube Scan
-      uses: sonarsource/sonarqube-scan-action@master
+      uses: sonarsource/sonarqube-scan-action@v1.0.0
       env:
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
