--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -17,12 +17,12 @@ jobs:
       with:
         fetch-depth: 0
 
-    # - name: Cache SonarQube packages
-    #   uses: actions/cache@v1
-    #   with:
-    #     path: ~/.sonar/cache
-    #     key: ${{ runner.os }}-sonar
-    #     restore-keys: ${{ runner.os }}-sonar
+    - name: Cache SonarQube packages
+      uses: actions/cache@v1
+      with:
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
           
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@v1.0.0
