--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -17,6 +17,12 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Set up JDK 17
+      uses: actions/setup-java@v1
+      with:
+        java-version: 17
+        distribution: temurin
+
     - name: Create application.properties
       run: |
         touch ./src/main/resources/application.properties
