--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -142,14 +142,14 @@ jobs:
         if: success()
         uses: Sniddl/discord-commits@v1.6
         with:
-          message: "CI : GitHub Action 테스트 빌드가 성공했습니다. ${{ github.run_id }}"
+          message: "WAS - CI : GitHub Action 테스트 빌드가 성공했습니다. ${{ github.run_id }}"
           webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
   
       - name: Notify Discord on Failure
         if: failure()
         uses: Sniddl/discord-commits@v1.6
         with:
-          message: "CI : GitHub Action 테스트 빌드가 실패했습니다. ${{ github.run_id }}"
+          message: "WAS - CI : GitHub Action 테스트 빌드가 실패했습니다. ${{ github.run_id }}"
           webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
           
