--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,15 @@ dependencies {
     
     testImplementation 'com.h2database:h2'
 
+    // google
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    // @log4j
+    implementation 'commons-logging:commons-logging:1.2'
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+
+    // IOUtils
+    implementation 'commons-io:commons-io:2.8.0'
 }
 
 tasks.named('test') {
